fix modal bug by adding overflow-hidden to body conditionally

--- a/components/Layout/SideBar/sidebar.module.css
+++ b/components/Layout/SideBar/sidebar.module.css
@@ -55,9 +55,16 @@
 }
 
 .Modal {
-  width: 60vw;
+  width: 50vw;
   height: 100%;
   position: fixed;
   left: 0;
   top: 0;
+  opacity: 0;
+  pointer-events: none;
+  will-change: opacity;
+}
+.ModalOpen {
+  opacity: 1;
+  pointer-events: auto;
 }
