--- a/components/Layout/layout.module.css
+++ b/components/Layout/layout.module.css
@@ -15,6 +15,7 @@
   position: relative;
   transition: 0.2s ease-out;
   min-height: 100%;
+  overflow-y: auto;
 }
 
 .Social {
@@ -40,6 +41,7 @@
   -o-filter: blur(1px);
   -ms-filter: blur(1px);
   filter: blur(1px);
+  overflow-y: hidden;
 }
 
 .Mobile {
