--- a/styles/globals.css
+++ b/styles/globals.css
@@ -101,10 +101,6 @@ body .light {
   color: rgba(252, 203, 130);
 }
 
-.freeze {
-  position: fixed;
-}
-
 @media screen and (max-width: 800px) {
   ::-webkit-scrollbar {
     width: 1vw;
